<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HWBrowser</string>
    <string name="action_settings">Settings</string>
    <string name="btnBack">Go Back</string>
    <string name="btnGo">Go</string>
    <string name="btnForward">Go forward</string>
    <string name="txtinputUrl"> http:// </string>
    <string name="btnHome">Go home</string>
    <string name="btnrefresh">Refresh </string>
    <string name="btnmenu">┇ </string>
    <string name="title_activity_activity_home">ActivityHome</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo">Logo</string>
    <string name="hinttext">htpp://HomePage.html</string>
    <string name="goActivity2">➭</string>
    <string name="mxh">Mạng xã hội</string>
    <string name="tt">Tin tức</string>
    <string name="gt">Giải trí</string>
    <string name="pd">↓</string>
    <string name="title_activity_activity_sub1">ActivitySub1</string>
    <string name="url">URL</string>
    <string name="search">Search</string>
    <string name="help">Help</string>

</resources>